// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channel reducer handles actions - setChannelId 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": "this-is-a-test-id",
  "message": "",
  "messages": Immutable.Record {
    "loading": false,
    "data": Immutable.List [],
    "errors": "",
  },
  "members": null,
}
`;

exports[`channel reducer handles epics - loadChannel 1`] = `
Immutable.List [
  Immutable.Map {
    "sender": Immutable.Map {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    },
    "message": "This is some message test-1",
    "createdAt": 1551963828,
    "type": 1,
    "id": "test-1",
    "spent": "0.2",
    "fromYou": true,
  },
  Immutable.Map {
    "sender": Immutable.Map {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    },
    "message": "This is some message test-2",
    "createdAt": 1551963828,
    "type": 1,
    "id": "test-2",
    "spent": "0.2",
    "fromYou": true,
  },
]
`;

exports[`channel reducer handles epics - loadMessages clears out pending messages 1`] = `
Immutable.Map {
  "test-1-op": Immutable.PendingMessage {
    "opId": "test-1-op",
    "channelId": "this-is-a-test-id",
    "txId": null,
    "error": null,
    "message": Immutable.Map {
      "id": "test-1",
      "type": 1,
      "createdAt": 1551963828,
      "message": "This is some message test-1",
      "spent": "23.23",
      "sender": Immutable.Map {
        "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      },
    },
    "status": "pending",
  },
  "test-2-op": Immutable.PendingMessage {
    "opId": "test-2-op",
    "channelId": "this-is-a-test-id",
    "txId": null,
    "error": null,
    "message": Immutable.Map {
      "id": "test-2",
      "type": 1,
      "createdAt": 1551963828,
      "message": "This is some message test-2",
      "spent": "23.23",
      "sender": Immutable.Map {
        "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      },
    },
    "status": "pending",
  },
}
`;

exports[`channel reducer handles epics - loadMessages loads for current channel 1`] = `
Immutable.List [
  Immutable.Map {
    "sender": Immutable.Map {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    },
    "message": "This is some message test-1",
    "createdAt": 1551963828,
    "type": 1,
    "id": "test-1",
    "spent": "0.2",
    "fromYou": true,
  },
  Immutable.Map {
    "sender": Immutable.Map {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    },
    "message": "This is some message test-2",
    "createdAt": 1551963828,
    "type": 1,
    "id": "test-2",
    "spent": "0.2",
    "fromYou": true,
  },
]
`;

exports[`channel reducer handles epics - resendMessage resend selected message 1`] = `
Immutable.Map {
  null: Immutable.PendingMessage {
    "opId": null,
    "channelId": "this-is-a-test-id",
    "txId": null,
    "error": null,
    "message": Immutable.Map {
      "id": "message-op-id",
      "type": 1,
      "createdAt": 1551963828,
      "message": "This is some message test-1",
      "spent": "23.23",
      "sender": Immutable.Map {
        "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      },
    },
    "status": "pending",
  },
}
`;

exports[`channel reducer handles epics - sendOnEnter creates and resolves pending message on finish 1`] = `
Immutable.Map {
  null: Immutable.PendingMessage {
    "opId": null,
    "channelId": "this-is-a-test-id",
    "txId": "test-tx-id",
    "error": Immutable.ZcashError {
      "code": -1,
      "message": "no error",
    },
    "message": Immutable.Map {
      "type": 1,
      "sender": Immutable.Map {
        "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        "username": "Saturn",
      },
      "createdAt": 1551963828,
      "message": "this is some message",
    },
    "status": "success",
  },
}
`;

exports[`channel reducer handles epics - sendOnEnter sends message 1`] = `
Object {
  "address": "zs1testaddressthis-is-a-test-id",
  "amount": "0.0001",
  "memo": Object {
    "createdAt": 1551963828,
    "message": "this is some message",
    "sender": Object {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      "username": "Saturn",
    },
    "type": 1,
  },
}
`;
